fixed filter issue on ios

--- a/fti-guide/app/(components)/AR-filter/ARFilter.module.css
+++ b/fti-guide/app/(components)/AR-filter/ARFilter.module.css
@@ -32,7 +32,7 @@
     overflow-x: hidden;
     overflow-y: hidden;
 }
-.videoImg {
+.videoImg, .filterImg {
     height: 100vh;
 }
 
